BHV-17164: Added disabled button state colors to the moon-neutral rules. Minor spacing corrections.
Enyo-DCO-1.1-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/css/moonstone-variables.less
+++ b/css/moonstone-variables.less
@@ -8,9 +8,11 @@
 @moon-neutral-scroller-icon: url(../images/DarkTheme_Icons/scroller_icon.png);
 @moon-neutral-border-color: @moon-white;
 @moon-neutral-icon-color: @moon-white;
-@moon-neutral-button-text-color:#4b4b4b;
-@moon-neutral-button-bg-color:@moon-white;
-@moon-neutral-thumb-bg-color:@moon-white;
+@moon-neutral-button-text-color: #4b4b4b;
+@moon-neutral-button-bg-color: @moon-white;
+@moon-neutral-button-disabled-text-color: #b3b3b3;
+@moon-neutral-button-disabled-bg-color: @moon-white;
+@moon-neutral-thumb-bg-color: @moon-white;
 
 
 // Icon Font
